--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGO_URL="mongodb+srv://admin:admin@cluster0.h9iqt.mongodb.net/"
-PORT="8000"
+MONGO_URL=mongodb+srv://admin:admin@cluster0.h9iqt.mongodb.net/blog
+PORT=8000
 SECRET="Intelllipaat"
